# swissmsplib

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-build.yml
swissmsplib/: factory.py  salt.py  swisscom.py  useragent.py
