[project]
name = "swissmsplib"
version = "0.0.3"
description = "The **Swiss** **M**obile **S**ervice **P**rovider **Lib**rary (swissmsplib) is a client library that allows interacting with Swiss mobile service providers as if they would expose a public API."
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "beautifulsoup4",
    "requests",
    "python-dateutil"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
